--- a/gcp/templates/database_ips.j2
+++ b/gcp/templates/database_ips.j2
@@ -1,3 +1,3 @@
-{% for host in groups['databases'] %}
+{% for host in groups['database'] %}
 {{ hostvars[host]['ansible_default_ipv4']['address'] }}:27017
 {% endfor %}
