make all load balancers connect to everything

--- a/gcp/templates/haproxy.cfg.j2
+++ b/gcp/templates/haproxy.cfg.j2
@@ -41,32 +41,45 @@ defaults
 #---------------------------------------------------------------------
 # FrontEnd Configuration
 #---------------------------------------------------------------------
+frontend hafrontend
+  bind *:80
+  mode http
+  default_backend webapp
+
 frontend halist
   bind *:2600
   mode http
-  default_backend backendlist
+  default_backend listservice
 
 frontend haitem
   bind *:2601
   mode http
-  default_backend backenditem
+  default_backend itemservice
 
 #---------------------------------------------------------------------
 # BackEnd Configuration
 #---------------------------------------------------------------------
-backend backendlist
+backend webapp
+  mode http
+  balance roundrobin
+  {% for host in groups['frontend'] %}
+    server {{ host }} {{ hostvars[host]['ansible_default_ipv4']['address'] }}:3000 check
+  {% endfor %}
+
+backend listservice
   mode http
   balance roundrobin
   {% for host in groups['list'] %}
     server {{ host }} {{ hostvars[host]['ansible_default_ipv4']['address'] }}:3000 check
   {% endfor %}
 
-backend backenditem
+backend itemservice
   mode http
   balance roundrobin
   {% for host in groups['item'] %}
     server {{ host }} {{ hostvars[host]['ansible_default_ipv4']['address'] }}:3000 check
   {% endfor %}
+
 #---------------------------------------------------------------------
 # HAProxy Monitoring Config URI
 #---------------------------------------------------------------------
