--- a/gcp/templates/haproxy_list.cfg.j2
+++ b/gcp/templates/haproxy_list.cfg.j2
@@ -44,39 +44,15 @@ defaults
 frontend hafrontend
   bind *:80
   mode http
-  default_backend webapp
-
-frontend halist
-  bind *:24001
-  mode http
   default_backend listservice
 
-frontend haitem
-  bind *:24002
-  mode http
-  default_backend itemservice
-
 #---------------------------------------------------------------------
-# BackEnd Configuration
+# BackEnd roundrobin as balance algorithm
 #---------------------------------------------------------------------
-backend webapp
-  mode http
-  balance roundrobin
-  {% for host in groups['frontend'] %}
-    server {{ host }} {{ hostvars[host]['ansible_default_ipv4']['address'] }}:3000 check
-  {% endfor %}
-
 backend listservice
   mode http
   balance roundrobin
   {% for host in groups['list'] %}
-    server {{ host }} {{ hostvars[host]['ansible_default_ipv4']['address'] }}:3000 check
-  {% endfor %}
-
-backend itemservice
-  mode http
-  balance roundrobin
-  {% for host in groups['item'] %}
     server {{ host }} {{ hostvars[host]['ansible_default_ipv4']['address'] }}:3000 check
   {% endfor %}
 
